# cadex

./: .gitignore  readme.txt
test/: CMakeLists.txt
test/CurvesLibrary/: CMakeLists.txt  Circle.cpp  Circle.h  Curve3D.cpp  Curve3D.h  CurvesLibraryApi.cpp  CurvesLibraryApi.h  Ellipse.cpp  Ellipse.h  Forwards.h  Helix.cpp  Helix.h  Point3D.h  Vector3D.h
test/GeometricCurves/: CMakeLists.txt  CurvesManager.cpp  CurvesManager.h  Summator.cpp  Summator.h  main.cpp
